fix(image): resolve vertical align (#1301)

--- a/style/mobile/components/image/v2/_index.less
+++ b/style/mobile/components/image/v2/_index.less
@@ -6,6 +6,10 @@
   color: @image-color;
   font-size: 0;
 
+  &__img {
+    vertical-align: middle;
+  }
+
   &__mask {
     display: flex;
     align-items: center;
